config-files/app-1-configs/app-1-dep.yaml
# Name: Brian Meta
# UCID: 30142390
# Course: ENSF 400
# Section: L01, B01
# Assignment 3

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-dep       
  labels:               
    app: app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-1
  template:       
    metadata:
      labels:
        app: app-1
    spec:
      containers:
        - name: app-1
          image: ghcr.io/denoslab/ensf400-sample-app:v1
          ports:
            - containerPort: 8080
