config-files/app-1-configs/app-1-svc.yaml
# Name: Brian Meta
# UCID: 30142390
# Course: ENSF 400
# Section: L01, B01
# Assignment 3

apiVersion: v1
kind: Service
metadata:
  name: app-1-svc
  labels:
    app: app-1-svc
spec:
  type: NodePort
  selector:
    app: app-1
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 31000
